--- a/cavanhagan.scss
+++ b/cavanhagan.scss
@@ -69,5 +69,20 @@
         box-shadow: inset 0 1px 3px hsl(220, 80, 70);
       }
     }
+    hr {
+      max-width: 400px;
+    }
+    h4{
+      color: hsl(220, 10, 20);
+      font-size: 32px;
+      margin: 0;
+    }
+    .antipy {
+      padding: 15px 0;
+      img {
+        width: 160px;
+        height: 69.4px;
+      }
+    }
   }
 }
