--- a/css/cavanhagan.css
+++ b/css/cavanhagan.css
@@ -64,5 +64,20 @@
   padding: 10px 35px;
   box-shadow: inset 0 1px 3px #759ef0;
 }
+.container .itemsContainer hr {
+  max-width: 400px;
+}
+.container .itemsContainer h4 {
+  color: #2e3138;
+  font-size: 32px;
+  margin: 0;
+}
+.container .itemsContainer .antipy {
+  padding: 15px 0;
+}
+.container .itemsContainer .antipy img {
+  width: 160px;
+  height: 69.4px;
+}
 
 /*# sourceMappingURL=cavanhagan.css.map */
